[package]
name = "webs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.11"
salvo = "0.31.1"
serde = {version="^1.0.144"}
tera = "1.17.0"
serde_json = "1.0.85"
tokio = { version = "1.12.0", features = ["full"] }
futures = "0.3" 
